--- a/nginx.conf
+++ b/nginx.conf
@@ -10,4 +10,10 @@ http {
       proxy_pass http://localhost:9000;
     }
   }
+
+  server {
+    listen     9002;
+    root       /var/www;
+    access_log off;
+  }
 }
