Added a tiny bit of information how things work in nginx

--- a/nginx.conf
+++ b/nginx.conf
@@ -2,8 +2,10 @@ events {
 }
 
 http {
+  # teach nginx to properly respond to http requests with proper Content-Type headers
   include mime.types;
 
+  # reverse proxy to node.js application
   server {
     listen     9001;
     access_log off;
@@ -13,6 +15,7 @@ http {
     }
   }
 
+  # static content server
   server {
     listen     9002;
     root       /var/www;
