--- a/nginx.conf
+++ b/nginx.conf
@@ -6,12 +6,16 @@ http {
   include mime.types;
 
   # reverse proxy to node.js application
+  upstream nodejsserver {
+    # hint: you can have multiple servers here
+    server localhost:9000;
+  }
   server {
     listen     9001;
     access_log off;
 
     location / {
-      proxy_pass http://localhost:9000;
+      proxy_pass http://nodejsserver;
     }
   }
 
